# givorsDays

./: .gitignore  README.md  default.nix
backend/: backend.cabal  stack.yaml
backend/app/: Main.hs
backend/src/: Lib.hs
frontend/: .gitignore  frontend.cabal  stack.yaml
frontend/app/: Main.hs  default.css
frontend/src/: App.hs  CSS.hs  Date.hs  GHCLauncher.hs  Lib.hs  MyOAuthConfig.hs  Settings.hs  Swip.hs  Utils.hs  WebStorage.hs  WidgetMonth.hs
frontend/src/Google/: Drive.hs  OAuth.hs  RequestUtils.hs
