name:                frontend
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/frontend#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:     Lib, Date, Utils, WidgetMonth, CSS, WebStorage, Swip
  build-depends:       base >= 4.7 && < 5
                     , reflex
                     , text
                     , time
                     , containers
                     , unordered-containers
                     , clay
                     , bytestring
                     , reflex-dom
                     , aeson
                     , jsaddle
                     , lens
                     , data-default
  if os(linux)
    build-depends:
                       jsaddle-warp
                     , reflex-dom-core
    ghc-options: -DUSE_WARP -Wall
    exposed-modules: GHCLauncher

  default-language:    Haskell2010

-- This is the android build
executable frontend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , frontend
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/frontend
